kustomize/cluster-overlays/pool4/httpbin-application/httpbin-ap.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-ap
  labels:
    app: httpbin-ap
    service: httpbin-ap
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-ap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-ap
      version: v1
  template:
    metadata:
      labels:
        app: httpbin-ap
        version: v1
    spec:
      containers:
      - image: quay.io/raffaelespazzoli/httpbin:latest
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
