kustomize/cluster-overlays/pool4/httpbin-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8gb
  annotations:
    k8gb.io/strategy: "roundRobin"
spec:
  rules:
  - host: httpbin.apps.global.practice.redhat.com
    http: # This section mirrors the same structure as that of an Ingress resource and will be used verbatim when creating the corresponding Ingress resource that will match the GSLB host
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              name: http
